--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,33 @@ p {
     color: #2F281E;
     font-size: 14px;
 }
+html,
+body {
+    --scrollbarBG: #f5e9d8;
+    --thumbBG: #fdcf8b;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
+body::-webkit-scrollbar {
+    width: 11px;
+}
+
+body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG);
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBG);
+}
 
 .btn-primary {
     background: #FF9900;
@@ -47,7 +74,9 @@ p {
     color: #2F281E;
 }
 
-
+.navbar {
+    max-width: 100vw;
+}
 .navbar-nav .nav-item .nav-link {
     color: #2F281E;
 }
@@ -56,15 +85,6 @@ p {
     align-self: center;
 }
 
-@media only screen and (max-width: 768px) {
-    .btn-primary, .btn-secondary {
-        margin-top: 10px;
-        margin-left: 0 !important;
-    }
-    .navbar-nav .nav-item {
-        align-self: start !important;
-    }
-}
 
 .featurebwa {
     padding: 120px 0px 100px 0px;
@@ -190,6 +210,31 @@ p {
     border-top: 1px #f7f4f4 solid;
     padding: 100px 0px 50px 0px;
     
+}
+
+@media only screen and (max-width: 768px) {
+
+    .btn-primary,
+    .btn-secondary {
+        margin-top: 10px;
+        margin-left: 0 !important;
+    }
+
+    .navbar-nav .nav-item {
+        align-self: start !important;
+    }
+
+    .herobwa h1 {
+        margin-top: 50px;
+    }
+
+    .featurebwa .icon-feature {
+        text-align: center;
+    }
+
+    .featurebwa h2 {
+        max-width: 100%;
+    }
 }
 
 /* 
